<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="70dp"
                android:scaleType="fitStart"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/city_default"
                android:textSize="23sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/toolbar_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textColor="@color/colorAccent"
                android:text="@string/tag_default"/>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:background="@color/colorPrimary"
        android:src="@drawable/inform"
        android:contentDescription="@string/city_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:src="@drawable/ic_security"
                android:contentDescription="@string/report_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/report"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@android:color/holo_green_dark"
                android:src="@drawable/ic_library_books"
                android:contentDescription="@string/news_feed_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/news"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body_text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:src="@drawable/ic_call"
                android:contentDescription="@string/call_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/call"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@android:color/holo_red_dark"
                android:src="@drawable/ic_map"
                android:contentDescription="@string/community_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/community"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body_text" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
</ScrollView>



