<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.femi.emergent.AddEventActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_event_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            app:layout_collapseMode="pin"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme"
            app:title="@string/app_name" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            tools:context="com.example.femi.emergent.AddNewsActivity"
            android:weightSum="1">

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_camera"
                android:layout_weight="0.69"
                android:contentDescription="@string/event_image" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edit_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_placeholder"
                    android:textColor="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edit_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/desc_placeholder"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add_event_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:elevation="5dp"
                android:text="@string/submit_button"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/add_event_cancel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:text="@string/cancel_button"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>


