<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/event_image" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Title"
        android:textSize="@dimen/app_bar_text"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:text="gfsakhfdvaglhdahgdhjggdjhgbadkbjabhsdbahsbdhabhgdhgasjhgdhghdahdhagshdghhhsdghdghd"
        android:textSize="@dimen/body_text"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="50dp">
    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@android:color/black"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/colorAccent"
        android:text="@string/direction"
        android:padding="10dp"
        android:textColor="@android:color/black"
        />
    </LinearLayout>

</LinearLayout>