<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme" />

    <View
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:alpha="0.5"
        android:elevation="3dp"
        android:background="@drawable/scrim"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/inform"
            android:contentDescription="@string/news_image" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:paddingTop="10dp"
            tools:text="Compatible Inkjet Cartridge"
            android:textColor="#333333"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="200dp">
        <TextView
            android:id="@+id/detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            tools:text="Many people were hoping that if the Democrats won control of Congress they would reverse the online gambling ban, but experts doubt they will even try or that if they do that the will be successful. Once the bill was passed and signed into law by the president, it became much harder to reverse the law. The democrats would need to bring up the law and get it to a vote, then after the vote passed it needs to go to the president for his signature. The problem with this is that the current president is the one who signed the bill into law in the first place.
        "
            android:textColor="#333333"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:textSize="15sp" />
        </ScrollView>

        <Button
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/more"
            android:visibility="gone"
            android:textColor="@android:color/black"/>

    </LinearLayout>

        <TextView
            android:id="@+id/detail_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="bottom|start"
            tools:text="Vincent Berry"
            android:textColor="#333333"
            android:textSize="15sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detail_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:elevation="5dp"
        android:src="@drawable/ic_share"
        app:layout_anchor="@id/detail_image"
        android:contentDescription="@string/share"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>